Fixes navigation on mobile when ad is present

--- a/botbot/less/responsive.less
+++ b/botbot/less/responsive.less
@@ -124,6 +124,13 @@ and (max-width: 768px) {
 	.display_bbsponsor #Log-Container article {
 		margin-right: 0;
 	}
+	
+	.display_bbsponsor #Log-Container .timeline-navigation {
+	        width: auto;
+	        position: fixed;
+	        right: 0;
+	        top: 0;
+	 }
 
 	#Log-Nav:target { display: block; }
 	#Site-Footer {
